@@ -102,4 +102,5 @@ p = 5:
 10: error("inconsistent moduli in hilbert: 5 != 2")
 11: 1
 -1
-Total time spent: 1092
+-1
+Total time spent: 1052
