@@ -12,6 +12,7 @@ Done for version 2.8.0 (released ??/??/2014):
     6- ellap can overflow on 32-bit machine [#1558]
        ellap(ellinit([582304190,64196421]),2147438927) -> overflow
        ellap(ellinit([-1137195,489565862]),2038074751) -> wrong result
+    7- nfhilbert(K,x,y, P above 2) could give wrong results [#1561]
 
   Added
     1- add optional argument to sumdigits to specify the base
